
    Checks & Agents:
    * FIX: winperf_processor: fix case where CPU percent is exactly 100%
    * FIX: blade_powerfan: fix mixup of default levels 50/40 -> 40/50
    * FIX: Cleaned up graph rendering of Check_MK services 
    * FIX: zypper: deal with output from SLES 10
    * FIX: zpool_status: Ignoring "No known data errors" text

    Multisite:
    * FIX: LDAP: Disabling use of referrals in active directory configuration
    * FIX: Fixed missing roles in auth.php (in some cases) which resulted in
           non visible pnp graphs and missing nagvis permissions
    * FIX: Fixed label color of black toner perfometers when fuel is low
    * FIX: Fixed wrong default settings of view filters in localized multisite
    * FIX: Fixed exception when enabling sounds for views relying on 
           e.g. alert statistics source

    WATO:
    * FIX: fix layout of Auxiliary tags table
    * FIX: avoid exception when called first time and first page ist host tags
    * FIX: fix validation of time-of-day input field (24:00)
    * FIX: automation users can now be deleted again (bug was introduced in 1.2.2p1)
    * FIX: fix logwatch pattern analyzer message "The host xyz is not
           managed by WATO." after direct access via snapin
    * FIX: Fixed first toggle of flags in global settings when default is set to True

    Event Console:
    * FIX: apply rewriting of application/hostname also when cancelling events

    Livestatus:
    * livestatus: fixed incorrect output formatting of comments_with_info column

1.2.2p2:
    Core:
    * FIX: better error message in case of exception in SNMP handling
    * FIX: livecheck: fixed handling of one-line plugin outputs and missing \n
           (Thanks to Florent Peterschmitt)

    Checks & Agents:
    * FIX: apache_status: use (also) apache_status.cfg instead of apache_status.conf
    * FIX: jolokia_info: ignore ERROR instances
    * FIX: f5_bigip_vserver: fix wrong OID (13 instead of 1), thanks to Miro Ramza