@@ -8,6 +8,7 @@
     * FIX: Cleaned up graph rendering of Check_MK services 
     * FIX: zypper: deal with output from SLES 10
     * FIX: zpool_status: Ignoring "No known data errors" text
+    * FIX: check_dns: parameter -A does not get an additional string
 
     Multisite:
     * FIX: LDAP: Disabling use of referrals in active directory configuration
